# SailRAG

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/src/sailrag/: main.py  settings.py
backend/src/sailrag/chunking/: chunker.py  models.py
backend/src/sailrag/embeddings/: ollama.py
backend/src/sailrag/ingest/: models.py  ocr.py  pdf_loader.py
backend/src/sailrag/llm/: ollama.py
backend/src/sailrag/opensearch/: client.py  index.py  search.py
backend/src/sailrag/rag/: prompting.py
ui/: Dockerfile  app.py  requirements.txt
